# hs-adwords

./: .gitignore  LICENSE  README.md  ServicesNew.hs  TestAdWords.hs  credentials  creds  customer  hs-adwords.cabal  stack.yaml  test.hs  token
src/: AdWords.hs  Schema.hs
src/AdWords/: AWQL.hs  Auth.hs  Details.hs  FS.hs  Service.hs  Services.hs  Types.hs
src/AdWords/Auth/: Server.hs
src/AdWords/Services/: CampaignService.hs
src/AdWords/Services/CampaignService/: Campaign.hs
src/AdWords/Services/CampaignService/Enumerations/: AdServingOptimizationStatus.hs  BudgetStatus.hs  CampaignStatus.hs  DeliveryMethod.hs  Level.hs  ListOperator.hs  NegativeGeoTargetType.hs  PositiveGeoTargetType.hs  RejectionReason.hs  ServingStatus.hs  TimeUnit.hs  UniversalAppBiddingStrategyGoalType.hs  UniversalAppCampaignAsset.hs
